syntax = "proto3";
package hiyoco.filter;

import "hiyoco/calendar/event.proto";

option java_package = "org.nomlab.hiyoco";
option java_outer_classname = "FilterServiceProtos";
option csharp_namespace = "Hiyoco.Filter.Service";

service Filter {
  rpc SayText (hiyoco.calendar.Text) returns (hiyoco.calendar.Result) {}
  rpc SayEvent (hiyoco.calendar.Event) returns (hiyoco.calendar.Result) {}
}
